# rusticneurons

./: .gitignore  README.md
Neural_network_lib/: Cargo.toml
Neural_network_lib/src/: files.rs  generating_and_testing.rs  lib.rs  loss_and_activation_functions.rs  neuralnetwork.rs  optimizers.rs  types_and_errors.rs  ui.rs
Neural_network_macro_lib/: Cargo.toml
Neural_network_main/: Cargo.toml
Neural_network_main/networks/: MNIST_Adam  testi_bitcode
Neural_network_main/src/: main.rs
networks/: MNIST_CE_LeReLU_softmax  adam_testing
