[package]
name = "Neural_network_main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neural_network_lib = {path = '../Neural_network_lib'}
neural_network_macro_lib = {path = '../Neural_network_macro_lib'}